--- a/src/main/resources/templates/committees/dashboard.html
+++ b/src/main/resources/templates/committees/dashboard.html
@@ -171,7 +171,7 @@
     /*<![CDATA[*/
     document.addEventListener('DOMContentLoaded', function() {
         const profileIcon = document.querySelector('.profile-icon');
-        const username = /*[[${committees.userDto.username}]]*/ 'Committee';
+        const username = /*[[${committee.userDto.username}]]*/ 'Committee';
         profileIcon.textContent = username.charAt(0).toUpperCase();
     });
     /*]]>*/
